--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>SimpleLanding - Bootstrap Landing Page Template</title>
+  <title>MateMati - Mates importados de Uruguay</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
@@ -20,13 +20,10 @@
 
   <!-- Main Stylesheet File -->
   <link href="css/style.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/fluid-gallery.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.8.1/baguetteBox.min.css">
 
-  <!-- =======================================================
-    Template Name: SimpleLanding
-    Template URL: https://templatemag.com/simplelanding-bootstrap-landing-page-template/
-    Author: TemplateMag.com
-    License: https://templatemag.com/license/
-  ======================================================= -->
+
 </head>
 
 <body>
@@ -34,7 +31,7 @@
   <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
       <div class="navbar-header">
-        <a class="navbar-brand" href="#">SimpleLanding</a>
+        <a class="navbar-brand" href="#">MateMati</a>
       </div>
       <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
@@ -45,76 +42,55 @@
   <div id="headerwrap">
     <div class="container">
       <div class="row">
-        <h1>SimpleLanding</h1>
-        <h2>High class landing page</h2>
+        <h1>MateMati</h1>
+        <h2>Importado de Uruguay</h2>
         <br/><br/>
         <div class="col-md-10 col-md-offset-1">
-          <img class="img-responsive gobottom" src="img/hero.jpg">
+          <img class="img-responsive gobottom" src="img/hero.png">
         </div>
       </div>
     </div>
     <!-- /.container -->
   </div>
 
+
   <div id="secondwrap">
     <div class="container">
       <div class="row">
-        <h2>Lorem Ipsum is Awesome!</h2>
-        <h4>Another text in the bottom of the title. Cool!</h4>
-        <br/>
-        <div class="col-md-8 col-md-offset-2">
-          <img src="img/two.png" class="img-responsive">
-        </div>
-      </div>
-      <div class="row mtop goleft">
-        <div class="col-md-4 col-md-offset-2">
-          <div class="linewrap">
-            <h5>FEATURE NUMBER 1</h5>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-          </div>
-          <div class="linewrap">
-            <h5>FEATURE NUMBER 2</h5>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="linewrap">
-            <h5>FEATURE NUMBER 3</h5>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-          </div>
-          <div class="linewrap">
-            <h5>FEATURE NUMBER 4</h5>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-          </div>
+        <div class="col-md-12" style="text-align:center">
+          <h1>Orgullosamente Uruguayo</h1>
+          <h3>Productos artesanales<br/>y de alta calidad.</h3>
+          <br/>
+
         </div>
       </div>
     </div>
   </div>
-
-  <div id="spacerwrap">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-8 col-md-offset-2">
-          <h2>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</h2>
-          <h4>Mark Robson - LandingSumo CEO</h4>
-        </div>
-      </div>
-    </div>
-  </div>
-
   <div id="finalwrap">
     <div class="container">
       <div class="row">
-        <div class="col-md-8 col-md-offset-2" style="text-align:center">
-          <h1>Give it a try!</h1>
-          <h3>Lorem Ipsum is simply dummy text of the<br/>printing and typesetting industry.</h3>
-          <br/>
-          <form role="form" action="register.php" method="post" enctype="plain">
-            <input type="email" name="email" class="subscribe-input" placeholder="Enter your e-mail address..." required="">
-            <a class="btn btn-conf-2 btn-yellow" type="submit">Invite Me!</a>
-          </form>
+        <!-- <div class="col-md-12"> -->
 
-        </div>
+
+
+          <div class="gallery">
+          			<figure class="picture" data-url="./img/product/h1.jpg"></figure>
+          			<figure class="picture" data-url="./img/product/v2.jpg"></figure>
+          			<figure class="picture" data-url="./img/product/h4.jpg"></figure>
+          			<figure class="picture" data-url="./img/product/h5.jpg"></figure>
+          			<figure class="picture" data-url="./img/product/v6.jpg"></figure>
+          			<figure class="picture" data-url="./img/product/h7.jpg"></figure>
+          			<figure class="picture" data-url="./img/product/h8.jpg"></figure>
+          			<figure class="picture" data-url="./img/product/h9.jpg"></figure>
+          			<figure class="picture" data-url="./img/product/v12.jpg"></figure>
+          			<figure class="picture" data-url="./img/product/h12.jpg"></figure>
+          			<figure class="picture" data-url="./img/product/h16.jpg"></figure>
+          			<figure class="picture" data-url="./img/product/h20.jpg"></figure>
+          			<figure class="picture" data-url="./img/product/v14.jpg"></figure>
+          			<!-- <figure class="picture"  data-url="./img/product/v10.jpg"></figure> -->
+                <br style="clear: both;">
+      		</div>
+        <!-- </div> -->
       </div>
     </div>
   </div>
@@ -164,28 +140,42 @@
     <div id="copyrights">
       <div class="container">
         <p>
-          &copy; Copyrights <strong>SimpleLanding</strong>. All Rights Reserved
+          &copy; Copyrights <strong>MateMati</strong>. All Rights Reserved
         </p>
         <div class="credits">
-          <!--
-            You are NOT allowed to delete the credit link to TemplateMag with free version.
-            You can delete the credit link only if you bought the pro version.
-            Buy the pro version with working PHP/AJAX contact form: https://templatemag.com/simplelanding-bootstrap-landing-page-template/
-            Licensing information: https://templatemag.com/license/
-          -->
-          Created with SimpleLanding template by <a href="https://templatemag.com/">TemplateMag</a>
+         Designed by <a target="_blank" href="https://1up.uy/">1UP</a>
         </div>
       </div>
     </div>
   </footer>
 
   <!-- JavaScript Libraries -->
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.8.1/baguetteBox.min.js"></script>
+  <script>
+      baguetteBox.run('.tz-gallery');
+  </script> -->
+
+
+
+
+
   <script src="lib/jquery/jquery.min.js"></script>
   <script src="lib/bootstrap/js/bootstrap.min.js"></script>
   <script src="lib/php-mail-form/validate.js"></script>
 
   <!-- Template Main Javascript File -->
   <script src="js/main.js"></script>
-
+  <script src="js/latae.js" type="text/javascript"></script>
+  <script>
+  jQuery(document).ready(function(){
+  	    $(".gallery").latae({
+  	        loader : 'img/loader.gif',
+  	        init : function() { console.log('bonjour'); },
+  	        loadPicture : function(event, img) { console.log($(img)); },
+  	        resize : function(event, gallery) { console.log(gallery); },
+  	        displayTitle: true
+  	    });
+  	});
+  </script>
 </body>
 </html>
