--- a/index.html
+++ b/index.html
@@ -20,13 +20,20 @@
 
   <!-- Main Stylesheet File -->
   <link href="css/style.css" rel="stylesheet">
-  <link rel="stylesheet" href="css/fluid-gallery.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.8.1/baguetteBox.min.css">
+  <!-- <link rel="stylesheet" href="css/fluid-gallery.css"> -->
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.8.1/baguetteBox.min.css"> -->
 
 
 </head>
 
 <body>
+
+  <div class="overlay">
+    <div class="overlay-inner">
+      <button onClick="close()" class="close">x</button>
+      <img>
+    </div>
+  </div>
 
   <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
@@ -58,49 +65,33 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12" style="text-align:center">
-          <h1>Orgullosamente Uruguayo</h1>
-          <h3>Productos artesanales<br/>y de alta calidad.</h3>
+          <h1>De Uruguay, con orgullo.</h1>
+          <h3>Productos artesanales de alta calidad.</h3>
           <br/>
 
         </div>
       </div>
     </div>
   </div>
-  <div id="finalwrap">
-    <div class="container">
+  <!-- <div id="finalwrap"> -->
+    <div class="container galcont">
       <div class="row">
-        <!-- <div class="col-md-12"> -->
-
-
-
-          <div class="gallery">
-          			<figure class="picture" data-url="./img/product/h1.jpg"></figure>
-          			<figure class="picture" data-url="./img/product/v2.jpg"></figure>
-          			<figure class="picture" data-url="./img/product/h4.jpg"></figure>
-          			<figure class="picture" data-url="./img/product/h5.jpg"></figure>
-          			<figure class="picture" data-url="./img/product/v6.jpg"></figure>
-          			<figure class="picture" data-url="./img/product/h7.jpg"></figure>
-          			<figure class="picture" data-url="./img/product/h8.jpg"></figure>
-          			<figure class="picture" data-url="./img/product/h9.jpg"></figure>
-          			<figure class="picture" data-url="./img/product/v12.jpg"></figure>
-          			<figure class="picture" data-url="./img/product/h12.jpg"></figure>
-          			<figure class="picture" data-url="./img/product/h16.jpg"></figure>
-          			<figure class="picture" data-url="./img/product/h20.jpg"></figure>
-          			<figure class="picture" data-url="./img/product/v14.jpg"></figure>
-          			<!-- <figure class="picture"  data-url="./img/product/v10.jpg"></figure> -->
-                <br style="clear: both;">
-      		</div>
-        <!-- </div> -->
+        <div class="col">
+          <h2>Galeria</h2>
+        </div>
       </div>
+      <div class="gallery">
+        <br style="clear: both;">
+  		</div>
     </div>
-  </div>
+  <!-- </div> -->
 
   <div id="get-in-touch">
     <div class="container">
       <div class="row">
         <div class="col-md-8 col-md-offset-2" style="text-align:center">
-          <h1>Get in touch</h1>
-          <h3>Lorem Ipsum is simply dummy text of the<br/>printing and typesetting industry.</h3>
+          <h1>The gustaria hablar con nosotros?</h1>
+          <h3>Siempre queremos saber su opinion, cualquier pregunta <br/>nos puede enviar un mensaje o contactar por las redes sociales.</h3>
           <form class="contact-form php-mail-form" role="form" action="contactform/contactform.php" method="POST">
 
             <div class="form-group">
@@ -150,32 +141,12 @@
   </footer>
 
   <!-- JavaScript Libraries -->
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.8.1/baguetteBox.min.js"></script>
-  <script>
-      baguetteBox.run('.tz-gallery');
-  </script> -->
-
-
-
-
-
   <script src="lib/jquery/jquery.min.js"></script>
   <script src="lib/bootstrap/js/bootstrap.min.js"></script>
   <script src="lib/php-mail-form/validate.js"></script>
 
   <!-- Template Main Javascript File -->
   <script src="js/main.js"></script>
-  <script src="js/latae.js" type="text/javascript"></script>
-  <script>
-  jQuery(document).ready(function(){
-  	    $(".gallery").latae({
-  	        loader : 'img/loader.gif',
-  	        init : function() { console.log('bonjour'); },
-  	        loadPicture : function(event, img) { console.log($(img)); },
-  	        resize : function(event, gallery) { console.log(gallery); },
-  	        displayTitle: true
-  	    });
-  	});
-  </script>
+
 </body>
 </html>
