--- a/index.html
+++ b/index.html
@@ -90,34 +90,34 @@
     <div class="container">
       <div class="row">
         <div class="col-md-8 col-md-offset-2" style="text-align:center">
-          <h1>The gustaria hablar con nosotros?</h1>
+          <h1>Te gustaria hablar con nosotros?</h1>
           <h3>Siempre queremos saber su opinion, cualquier pregunta <br/>nos puede enviar un mensaje o contactar por las redes sociales.</h3>
           <form class="contact-form php-mail-form" role="form" action="contactform/contactform.php" method="POST">
 
             <div class="form-group">
-              <input type="name" name="name" class="form-control" id="contact-name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" >
+              <input type="name" name="name" class="form-control" id="contact-name" placeholder="Nombre" data-rule="minlen:4" data-msg="Por favor llene el campo" >
               <div class="validate"></div>
             </div>
             <div class="form-group">
-              <input type="email" name="email" class="form-control" id="contact-email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email">
+              <input type="email" name="email" class="form-control" id="contact-email" placeholder="Email" data-rule="email" data-msg="Email invalido">
               <div class="validate"></div>
             </div>
             <div class="form-group">
-              <input type="text" name="subject" class="form-control" id="contact-subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject">
+              <input type="text" name="subject" class="form-control" id="contact-subject" placeholder="Subjeto" data-rule="minlen:4" data-msg="Subjeto vacio">
               <div class="validate"></div>
             </div>
 
             <div class="form-group">
-              <textarea class="form-control" name="message" id="contact-message" placeholder="Your Message" rows="5" data-rule="required" data-msg="Please write something for us"></textarea>
+              <textarea class="form-control" name="message" id="contact-message" placeholder="Mensaje" rows="5" data-rule="required" data-msg="Escribanos algo!"></textarea>
               <div class="validate"></div>
             </div>
 
             <div class="loading"></div>
             <div class="error-message"></div>
-            <div class="sent-message">Your message has been sent. Thank you!</div>
+            <div class="sent-message">Tu mensaje ha sido enviado, gracias!</div>
 
             <div class="form-send">
-              <button type="submit" class="btn btn-large">Send Message</button>
+              <button type="submit" class="btn btn-large">Enviar</button>
             </div>
 
           </form>
@@ -131,7 +131,7 @@
     <div id="copyrights">
       <div class="container">
         <p>
-          &copy; Copyrights <strong>MateMati</strong>. All Rights Reserved
+          &copy; Copyrights <strong>MateMati</strong>.
         </p>
         <div class="credits">
          Designed by <a target="_blank" href="https://1up.uy/">1UP</a>
