--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <div class="container galcont">
       <div class="row">
         <div class="col">
-          <h2>Galeria</h2>
+          <h2>Galería</h2>
         </div>
       </div>
       <div class="gallery">
@@ -99,7 +99,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-8 col-md-offset-2" style="text-align:center">
-          <h1>Te gustaria hablar con nosotros?</h1>
+          <h1>Te gustaría hablar con nosotros?</h1>
           <h3>Siempre queremos saber su opinion, cualquier pregunta <br/>nos puede enviar un mensaje o contactar por las redes sociales.</h3>
           <form class="contact-form php-mail-form" role="form" action="contactform/contactform.php" method="POST">
 
