testing netlift form control

--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@
         <div class="col-md-8 col-md-offset-2" style="text-align:center">
           <h1>Te gustaría hablar con nosotros?</h1>
           <h3>Siempre queremos saber su opinion, cualquier pregunta <br/>nos puede enviar un mensaje o contactar por las redes sociales.</h3>
-          <form class="contact-form php-mail-form" role="form" action="contactform/contactformblue.php" method="POST">
+          <form class="contact-form php-mail-form" role="form"  method="POST" netlify>
+          <!-- <form class="contact-form php-mail-form" role="form" action="contactform/contactform.php" method="POST" > -->
 
             <div class="form-group">
               <input type="name" name="name" class="form-control" id="contact-name" placeholder="Nombre" data-rule="minlen:4" data-msg="Por favor llene el campo" >
