--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <div class="col-md-8 col-md-offset-2" style="text-align:center">
           <h1>Te gustaría hablar con nosotros?</h1>
           <h3>Siempre queremos saber su opinion, cualquier pregunta <br/>nos puede enviar un mensaje o contactar por las redes sociales.</h3>
-          <!-- <form class="contact-form php-mail-form" role="form"  method="POST" netlify> -->
+          <!-- <form class="contact-form php-mail-form" role="form"  method="POST" name="contact" netlify> -->
           <form class="contact-form php-mail-form" role="form" action="contactform/contactform.php" method="POST" name="contact" netlify>
 
             <div class="form-group">
@@ -123,7 +123,7 @@
             </div>
 
             <div class="loading"></div>
-            <div class="error-message"></div>
+            <!-- <div class="error-message"></div> -->
             <div class="sent-message">Tu mensaje ha sido enviado, gracias!</div>
 
             <div class="form-send">
