--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           <h1>Te gustaría hablar con nosotros?</h1>
           <h3>Siempre queremos saber su opinion, cualquier pregunta <br/>nos puede enviar un mensaje o contactar por las redes sociales.</h3>
           <!-- <form class="contact-form php-mail-form" role="form"  method="POST" name="contact" netlify> -->
-          <form class="contact-form php-mail-form" role="form" action="contactform/contactform.php" method="POST" name="contact" netlify>
+          <form class="contact-form php-mail-form" role="form"  method="POST" name="contact" netlify>
 
             <div class="form-group">
               <input type="name" name="name" class="form-control" id="contact-name" placeholder="Nombre" data-rule="minlen:4" data-msg="Por favor llene el campo" >
