--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             </div>
 
             <div class="loading"></div>
-            <!-- <div class="error-message"></div> -->
+            <div class="error-message"></div>
             <div class="sent-message">Tu mensaje ha sido enviado, gracias!</div>
 
             <div class="form-send">
@@ -144,7 +144,7 @@
           &copy; Copyrights <strong>MateMati</strong>.
         </p>
         <div class="credits">
-         Designed by <a target="_blank" href="https://1up.uy/">1UP</a>
+         Designed by <a target="_blank" href="https://www.1up.uy/">1UP</a>
         </div>
       </div>
     </div>
@@ -153,7 +153,7 @@
   <!-- JavaScript Libraries -->
   <script src="lib/jquery/jquery.min.js"></script>
   <script src="lib/bootstrap/js/bootstrap.min.js"></script>
-  <script src="lib/php-mail-form/validate.js"></script>
+  <!-- <script src="lib/php-mail-form/validate.js"></script> -->
 
   <!-- Template Main Javascript File -->
   <script src="js/main.js"></script>
