removed email php, added netlify email

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <div class="container">
       <div class="row">
         <h1>MateMati</h1>
-        <h2>Importado de Uruguay</h2>
+        <h2>Mates importados de Uruguay</h2>
         <br/><br/>
         <div class="col-md-10 col-md-offset-1">
           <img class="img-responsive gobottom" src="img/hero.png">
