--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
 
   <!-- Main Stylesheet File -->
   <link href="css/style.css" rel="stylesheet">
-  <!-- <link rel="stylesheet" href="css/fluid-gallery.css"> -->
-  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.8.1/baguetteBox.min.css"> -->
+  <script src="https://kit.fontawesome.com/7a6568eaab.js"></script>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-140464400-1"></script>
@@ -48,6 +47,11 @@
     <div class="container">
       <div class="navbar-header">
         <a class="navbar-brand" href="#">MateMati</a>
+        <div class="navbar-social">
+          <a href="https://www.facebook.com/MateMati-Mates-y-bombillas-artesanales--330074234375549/" target="_blank" rel="noreferrer nofollow"><i class="fab fa-facebook-square"></i></a>
+          <a href="https://www.instagram.com/matematibcna4" target="_blank" rel="noreferrer nofollow"><i class="fab fa-instagram"></i></a>
+          <a href="https://wa.me/34658228732?text=Hola%20Mati" target="_blank" rel="noreferrer nofollow"><i class="fab fa-whatsapp"></i></a>
+        </div>
       </div>
       <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
