--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <!-- Favicons -->
   <link href="img/favicon.png" rel="icon">
-  <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
+
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Lato:400,300,900,100,700" rel="stylesheet">
@@ -46,7 +46,7 @@
   <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
       <div class="navbar-header">
-        <a class="navbar-brand" href="#">MateMati</a>
+        <a class="navbar-brand" href="#"><img src="img/matemati_logo.svg" alt="MateMati" /></a>
         <div class="navbar-social">
           <a href="https://www.facebook.com/MateMati-Mates-y-bombillas-artesanales--330074234375549/" target="_blank" rel="noreferrer nofollow"><i class="fab fa-facebook-square"></i></a>
           <a href="https://www.instagram.com/matematibcna4" target="_blank" rel="noreferrer nofollow"><i class="fab fa-instagram"></i></a>
@@ -62,7 +62,7 @@
   <div id="headerwrap">
     <div class="container">
       <div class="row">
-        <h1>MateMati</h1>
+        <img class="main-logo" src="img/matemati3.svg" />
         <h2>Mates importados de Uruguay</h2>
         <br/><br/>
         <div class="col-md-10 col-md-offset-1">
