Changed text area

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <div class="container">
       <div class="row">
         <img class="main-logo" src="img/matemati3.svg" />
-        <h2>Mates importados de Uruguay</h2>
+        <h2>De Uruguay, con orgullo</h2>
         <br/><br/>
         <div class="col-md-10 col-md-offset-1">
           <img class="img-responsive gobottom" src="img/hero.png">
@@ -77,12 +77,24 @@
   <div id="secondwrap">
     <div class="container">
       <div class="row">
-        <div class="col-md-12" style="text-align:center">
-          <h1>De Uruguay, con orgullo.</h1>
-          <h3>Productos artesanales de alta calidad.</h3>
+        <h1>El mate</h1>
+        <div class="col-md-12">
+          <img id="textfriend" src="./img/textfriend.jpg" alt="matemati"/>
+          <p>La palabra &quot;mate&quot; tiene su origen en el vocablo quechua &quot;mati&quot; que quiere decir calabaza. Los colonizadores españoles lo usaron para referirse a lo que los guaraníes llamaban &quot;caiguá&quot; (káa=yerba, y=agua, gua=es un sufijo de procedencia) que quiere decir &quot;lo que pertenece a la yerba&quot; o &quot;lo de la yerba&quot;.</p>
+          <br/>
+          <p>Las prácticas de consumo de yerba mate tienen un origen histórico, social y cultural, fuertemente arraigado en todo el territorio uruguayo, constituyendo uno de los pilares identitarios más significativos del país. Asimismo, el peso social, cultural y simbólico de esta práctica también se extiende a gran parte de la región, consumiéndose históricamente en Argentina, Paraguay y el sur brasileño, con tendencias a continuar expandiéndose a otros países del cono sur, e incluso, a otros continentes.</p>
+          <br/>
+          <p>Para quienes convivimos con el mate desde los primeros días de nuestra existencia, tomar mate significa mucho más que tomar una simple infusión. El mate, poco a poco, cobra vida y se transforma en un pedacito de la identidad de los “Rioplatenses”. El mate es un compañero cuando estamos solos y es sinónimo de unión, compañerismo y solidaridad cuando estamos con otros. Decirle a un amigo “nos juntamos a tomar unos mates” constituye el medio para encontrarse con ese amigo y, al mismo tiempo, el fin de querer compartir un rico mate con la persona querida. El mate invita al encuentro y nos acerca, propiciando la interacción con el otro. El mate no es una simple práctica de consumo, el mate es identidad: identidad colectiva.</p>
+          <br/>
+          <p>El antropólogo uruguayo Daniel Vidart dice: &quot;tras el ademán litúrgico de preparar, cebar, y tomar mate hay una concepción del mundo y de la vida...el mate vence las tendencias aislacionistas del criollo...empareja las clases sociales...Y, en todos los tiempos, fue el mate el que hizo la rueda y no la rueda la que trajo al mate&quot;.</p>
+          <br/>
+          <p>En MateMati, tenemos productos hechos de forma absolutamente artesanal, fabricados en Uruguay por personas que han dedicado su vida a esto. Mates y bombillas tradicionales y de excelente calidad para acompañar cada uno de sus días.</p>
           <br/>
 
         </div>
+        <!-- <div class="col-md-4"> -->
+          <!-- <img id="textfriend" src="./img/textfriend.jpg" alt="matemati"/> -->
+        <!-- </div> -->
       </div>
     </div>
   </div>
@@ -133,9 +145,7 @@
             <div class="form-send">
               <button type="submit" class="btn btn-large">Enviar</button>
             </div>
-
           </form>
-
         </div>
       </div>
     </div>
