--- a/index.html
+++ b/index.html
@@ -4,13 +4,18 @@
 <head>
   <meta charset="utf-8">
   <title>MateMati - Mates importados de Uruguay</title>
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <meta content="" name="keywords">
-  <meta content="" name="description">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="keywords" content="matemati, mate, mates, yerba mate, uruguay, barcelona, madrid, argentina, artesanal, yerba, españa, europa, venta, compra, buy mate, sell mate, imported mate, mate importado">
+  <meta name="description" content="MateMati – Mates artesanales, hechos a mano y con experienca, importados de uruguay. Tu mejor opcion para conseguir un autentico mate.">
+
+  <meta property="og:image" content="https://www.matemati.es/img/matemati_master_fb.jpg"/>
+  <meta property="og:title" content="MateMati - Mates importados de Uruguay"/>
+  <meta property="og:url" content="https://www.matemati.es"/>
+  <meta property="og:site_name" content="MateMati"/>
+
 
   <!-- Favicons -->
   <link href="img/favicon.png" rel="icon">
-
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Lato:400,300,900,100,700" rel="stylesheet">
