--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="keywords" content="matemati, mate, mates, yerba mate, uruguay, barcelona, madrid, argentina, artesanal, yerba, españa, europa, venta, compra, buy mate, sell mate, imported mate, mate importado">
   <meta name="description" content="MateMati – Mates artesanales, hechos a mano y con experienca, importados de uruguay. Tu mejor opcion para conseguir un autentico mate.">
-  <meta name=”robots” content=”index, follow”>
+  <meta name="robots" content="index,follow">
 
   <meta property="og:image" content="https://www.matemati.es/img/matemati_master_fb.jpg"/>
   <meta property="og:title" content="MateMati - Mates importados de Uruguay"/>
   <meta property="og:url" content="https://www.matemati.es"/>
   <meta property="og:site_name" content="MateMati"/>
+  <meta property="og:type" content="website"/>
+  <meta property="og:description" content="MateMati – Mates artesanales, hechos a mano y con experienca, importados de uruguay. Tu mejor opcion para conseguir un autentico mate."/>
 
 
   <!-- Favicons -->
