--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <a class="navbar-brand" href="#"><img src="img/matemati_logo.svg" alt="MateMati" /></a>
         <div class="navbar-social">
           <a href="https://www.facebook.com/MateMati-Mates-y-bombillas-artesanales--330074234375549/" target="_blank" rel="noreferrer nofollow"><i class="fab fa-facebook-square"></i></a>
-          <a href="https://www.instagram.com/matematibcna4" target="_blank" rel="noreferrer nofollow"><i class="fab fa-instagram"></i></a>
+          <a href="https://www.instagram.com/matematibcna.uy/" target="_blank" rel="noreferrer nofollow"><i class="fab fa-instagram"></i></a>
           <a href="https://wa.me/34658228732?text=Hola%20Mati" target="_blank" rel="noreferrer nofollow"><i class="fab fa-whatsapp"></i></a>
         </div>
       </div>
