--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
           &copy; Copyrights <strong>MateMati</strong>.
         </p>
         <div class="credits">
-         Designed by <a target="_blank" href="https://www.1up.uy/">1UP</a>
+         Sitio diseñado por <a target="_blank" href="https://www.rankingonline.es">Ranking Online</a>
         </div>
       </div>
     </div>
